# tesla-notes

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  supabase_schema.sql  vite.config.ts  启动Tesla-Notes.sh
.github/workflows/: deploy.yml
docs/: 2026-02-13-部署与性能优化记录.md  公网部署与手机同步指南.md  项目总结.md
scripts/: migrate-sqlite-to-supabase.cjs  migrate-to-supabase.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: memo.rs  mod.rs  plan.rs
src-tauri/src/database/: init.rs  memo.rs  mod.rs  plan.rs
src/components/Calendar/: MiniCalendar.tsx
src/components/Common/: Badge.tsx  Button.tsx  CategoryTabs.tsx  EmptyState.tsx  StatusToggle.tsx  ThemeToggle.tsx  index.ts
src/components/Editor/: MemoEditor.tsx
src/components/MemoList/: MemoCard.tsx  MemoList.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  CommandPalette.tsx  Empty.tsx  IconButton.tsx  Input.tsx  Skeleton.tsx  Sonner.tsx  index.ts
src/lib/: cn.ts  image.ts
src/services/: cloudClient.ts  dataClient.ts  localClient.ts  types.ts
src/types/: index.ts
